--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>简单的CSS圣诞老人滑动面板</title>
+  <title>祝周剑英圣诞节快乐~</title>
   <script src="./jquery.min.js"></script>
   <style>
     #santa {
@@ -747,7 +747,7 @@ ustf6O5Hu09OaFIyndAT6Wz/rKYK06A/MDv89xPcMvNT+RNgAHRQ+6wwubXuAAAAAElFTkSuQmCC" tr
     <div id="Santa_Greeting">
       <div id="Santa_Message">
         <p>其实我们挺像的</p>
-        <p>不想说这么多啦</p>
+        <p>不想说煽情的话！</p>
         <p>有很多个想放弃的时刻都坚持下来了</p>
         <p>好好在一起吧</p>
       </div>
