--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8" name="referrer" content="never"/>
+    <meta name="referrer" content="never" content="width=device-width,initial-scale=1" />
     <title>吃和远方Bolg首页</title>
     <meta name="description" content="吃和远方的前端记录" />
     <link rel="icon" href="/icon.png" />
