--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" name="referrer" content="never"/>
-    <meta name="referrer" content="never" content="width=device-width,initial-scale=1" />
+    <meta charset="utf-8" name="referrer" content="never" />
+    <meta
+      name="referrer"
+      content="never"
+      content="width=device-width,initial-scale=1"
+    />
     <title>吃和远方Bolg首页</title>
     <meta name="description" content="吃和远方的前端记录" />
     <link rel="icon" href="/icon.png" />
@@ -10,7 +14,7 @@
       .box {
         width: 300px;
       }
-      .aa {
+      .aaa {
         width: 100%;
       }
     </style>
@@ -18,7 +22,10 @@
   <body>
     <div class="box">
       <video
-      class="aa"
+        class="aaa"
+        x5-video-player-fullscreen="true"
+        x5-playsinline
+        playsinline
         preload="auto"
         autoplay
         controls
