--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <video
         class="aaa"
         x5-video-player-fullscreen="true"
+        x5-video-player-type="h5"
         x5-playsinline
         playsinline
         preload="auto"
